trying to fix githooks